[package]
name = "bus"
version = "2.4.0"
authors = ["Jon Gjengset <jon@thesquareplanet.com>"]
edition = "2018"
license = "MIT OR Apache-2.0"

readme = "README.md"
description = "A lock-free, bounded, single-producer, multi-consumer, broadcast channel."
repository = "https://github.com/jonhoo/bus.git"

keywords = ["channel","broadcast","lock-free"]
categories = ["concurrency"]

[dependencies]
num_cpus = "1"
crossbeam-channel = "0.5"
futures = "0.3.28"

[profile.release]
debug = true
